app/imports/custom/owlgred/client/js/class_expression_grammar_parser_OWLGrEd.js

  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(ce) { return ce === null ? null : ce; },
        peg$c1 = { type: "any", description: "any character" },
        peg$c2 = "or",
        peg$c3 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c4 = function(head, tail) {
              var items = listFromFirstTail(head, tail, 3);
              return node("disjunction", items);
            },
        peg$c5 = "that",
        peg$c6 = { type: "literal", value: "that", description: "\"that\"" },
        peg$c7 = "and",
        peg$c8 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c9 = function(cls, r1, rtail) {
              var restrictions = listFromFirstTail(r1, rtail, 3);
              return {
                grammarProduction: "conjunctionWithRestrictions",
                class: cls,
                restrictions: restrictions
              };
            },
        peg$c10 = function(p1, ptail) {
              var items = listFromFirstTail(p1, ptail, 3);
              return node("conjunctionNoRestrictions", items);
            },
        peg$c11 = function(head, tail) {
              var o = {};
              copyProps(o, head);
              copyProps(o, tail);
              return o;
            },
        peg$c12 = "inverse",
        peg$c13 = { type: "literal", value: "inverse", description: "\"inverse\"" },
        peg$c14 = "(",
        peg$c15 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c16 = ")",
        peg$c17 = { type: "literal", value: ")", description: "\")\"" },
        peg$c18 = function(prop) { return { inverse: "true", property: prop }; },
        peg$c19 = function(prop) { return { inverse: "false", property: prop }; },
        peg$c20 = "some",
        peg$c21 = { type: "literal", value: "some", description: "\"some\"" },
        peg$c22 = "only",
        peg$c23 = { type: "literal", value: "only", description: "\"only\"" },
        peg$c24 = function(kw, v) { return { keyword: kw, value: v }; },
        peg$c25 = "value",
        peg$c26 = { type: "literal", value: "value", description: "\"value\"" },
        peg$c27 = function(v) { return { keyword: "value", value: v }; },
        peg$c28 = "Self",
        peg$c29 = { type: "literal", value: "Self", description: "\"Self\"" },
        peg$c30 = "self",
        peg$c31 = { type: "literal", value: "self", description: "\"self\"" },
        peg$c32 = function() { return "Self"; },
        peg$c33 = function(kw) { return { keyword: kw }; },
        peg$c34 = "min",
        peg$c35 = { type: "literal", value: "min", description: "\"min\"" },
        peg$c36 = "max",
        peg$c37 = { type: "literal", value: "max", description: "\"max\"" },
        peg$c38 = "exactly",
        peg$c39 = { type: "literal", value: "exactly", description: "\"exactly\"" },
        peg$c40 = function(kw, c, sp) { return sp; },
        peg$c41 = function(kw, c, v) { return { keyword: kw, count: c, value: v === null ? null : v }; },
        peg$c42 = function(n, body) {
              return {
                negation: n === null ? "false" : "true",
                primaryType: body.primaryType,
                primary: body.primary
              };
            },
        peg$c43 = "not",
        peg$c44 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c45 = function() { return "true"; },
        peg$c46 = function(r) { return { primaryType: "restriction", primary: r }; },
        peg$c47 = function(a) { return { primaryType: "atomic",      primary: a }; },
        peg$c48 = function(cls) { return { atomType: "class", class: cls }; },
        peg$c49 = "{",
        peg$c50 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c51 = "}",
        peg$c52 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c53 = function(lst) { return { atomType: "individualList", list: lst }; },
        peg$c54 = function(e) { return { atomType: "expression", expression: e }; },
        peg$c55 = function(lst) { return { unknownPrimaryType: "literalList", list: lst }; },
        peg$c56 = function(lst) { return { unknownPrimaryType: "individualList", list: lst }; },
        peg$c57 = function(ex) { return { unknownPrimaryType: "expression", expression: ex }; },
        peg$c58 = function(r) { return { unknownPrimaryType: "restriction", restriction: r }; },
        peg$c59 = function(dr) { return { unknownPrimaryType: "datatypeRestriction", restriction: dr }; },
        peg$c60 = function(iri) { return { unknownPrimaryType: "IRI", IRI: iri }; },
        peg$c61 = ",",
        peg$c62 = { type: "literal", value: ",", description: "\",\"" },
        peg$c63 = function(first, rest) {
              var out = [first];
              for (var i = 0; i < rest.length; i++) out.push(rest[i][2]);
              return out;
            },
        peg$c64 = function(iri) { return { individualType: "IRI", individual: iri }; },
        peg$c65 = function(bn) { return { individualType: "blank", individual: bn }; },
        peg$c66 = function(head, tail) {
              var items = listFromFirstTail(head, tail, 3);
              return node("unknownDisjunction", items);
            },
        peg$c67 = function(p1, ptail) {
              var items = listFromFirstTail(p1, ptail, 3);
              return node("unknownConjunction", items);
            },
        peg$c68 = function(n, body) {
              var o = { negation: n === null ? "false" : "true" };
              copyProps(o, body);
              return o;
            },
        peg$c69 = function(head, tail) {
              var items = listFromFirstTail(head, tail, 3);
              return node("dataDisjunction", items);
            },
        peg$c70 = function(head, tail) {
              var items = listFromFirstTail(head, tail, 3);
              return node("dataConjunction", items);
            },
        peg$c71 = function(r) { return { dataPrimaryType: "datatypeRestriction", restriction: r }; },
        peg$c72 = function(d) { return { dataPrimaryType: "datatype", datatype: d }; },
        peg$c73 = function(ll) { return { dataPrimaryType: "literalList", literalList: ll }; },
        peg$c74 = function(dr) { return { dataPrimaryType: "dataRange", dataRange: dr }; },
        peg$c75 = function(iri) { return { type: "IRI", value: iri }; },
        peg$c76 = "integer",
        peg$c77 = { type: "literal", value: "integer", description: "\"integer\"" },
        peg$c78 = function() { return { type: "predefined", value: "integer" }; },
        peg$c79 = "decimal",
        peg$c80 = { type: "literal", value: "decimal", description: "\"decimal\"" },
        peg$c81 = function() { return { type: "predefined", value: "decimal" }; },
        peg$c82 = "float",
        peg$c83 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c84 = function() { return { type: "predefined", value: "float" }; },
        peg$c85 = "string",
        peg$c86 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c87 = function() { return { type: "predefined", value: "string" }; },
        peg$c88 = "[",
        peg$c89 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c90 = "]",
        peg$c91 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c92 = function(dt, r1, rtail) {
              var restrictions = listFromFirstTail(r1, rtail, 3);
              return { datatype: dt, restrictions: restrictions };
            },
        peg$c93 = function(f, v) { return { facet: f, value: v }; },
        peg$c94 = "<=",
        peg$c95 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c96 = "<",
        peg$c97 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c98 = ">=",
        peg$c99 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c100 = ">",
        peg$c101 = { type: "literal", value: ">", description: "\">\"" },
        peg$c102 = "length",
        peg$c103 = { type: "literal", value: "length", description: "\"length\"" },
        peg$c104 = "maxLength",
        peg$c105 = { type: "literal", value: "maxLength", description: "\"maxLength\"" },
        peg$c106 = "minLength",
        peg$c107 = { type: "literal", value: "minLength", description: "\"minLength\"" },
        peg$c108 = "pattern",
        peg$c109 = { type: "literal", value: "pattern", description: "\"pattern\"" },
        peg$c110 = "langPattern",
        peg$c111 = { type: "literal", value: "langPattern", description: "\"langPattern\"" },
        peg$c112 = function(first, rest) { return listFromFirstTail(first, rest, 3); },
        peg$c113 = "^^",
        peg$c114 = { type: "literal", value: "^^", description: "\"^^\"" },
        peg$c115 = function(v, dt) { return { type: "typed", value: v, datatype: dt }; },
        peg$c116 = function(v) { return { type: "stringNoLang", value: v }; },
        peg$c117 = "true",
        peg$c118 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c119 = function() { return "\"true\""; },
        peg$c120 = "false",
        peg$c121 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c122 = function() { return "\"false\""; },
        peg$c123 = "@",
        peg$c124 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c125 = function(v, lang) { return { type: "stringWithLang", value: v, language: lang }; },
        peg$c126 = "+",
        peg$c127 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c128 = "-",
        peg$c129 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c130 = function(v) { return { type: "integer", value: v }; },
        peg$c131 = ".",
        peg$c132 = { type: "literal", value: ".", description: "\".\"" },
        peg$c133 = function(v) { return { type: "decimal", value: v }; },
        peg$c134 = "f",
        peg$c135 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c136 = "F",
        peg$c137 = { type: "literal", value: "F", description: "\"F\"" },
        peg$c138 = function(v) { return { type: "float", value: v }; },
        peg$c139 = "e",
        peg$c140 = { type: "literal", value: "e", description: "\"e\"" },
        peg$c141 = "E",
        peg$c142 = { type: "literal", value: "E", description: "\"E\"" },
        peg$c143 = /^[0-9]/,
        peg$c144 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c145 = "\"",
        peg$c146 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c147 = function(s) { return s; },
        peg$c148 = "\\\\",
        peg$c149 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c150 = "\\\"",
        peg$c151 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c152 = /^[\x01-!#-[\]-\xFF]/,
        peg$c153 = { type: "class", value: "[\\u0001-\\u0021\\u0023-\\u005B\\u005D-\\u00FF]", description: "[\\u0001-\\u0021\\u0023-\\u005B\\u005D-\\u00FF]" },
        peg$c154 = /^[A-Za-z\-]/,
        peg$c155 = { type: "class", value: "[A-Za-z\\-]", description: "[A-Za-z\\-]" },
        peg$c156 = function(v) { return { IRItype: "fullIRI", value: v }; },
        peg$c157 = function(v) { return { IRItype: "abbreviatedIRI", value: v }; },
        peg$c158 = function(v) { return { IRItype: "fullNamespaceIRI", value: v }; },
        peg$c159 = function(v) { return { IRItype: "simpleIRI", value: v }; },
        peg$c160 = /^[!-;=?-~\x80-\xFF]/,
        peg$c161 = { type: "class", value: "[\\u0021-\\u003B\\u003D\\u003F-\\u007E\\u0080-\\u00FF]", description: "[\\u0021-\\u003B\\u003D\\u003F-\\u007E\\u0080-\\u00FF]" },
        peg$c162 = function(name, prefix) { return { name: name, prefix: prefix }; },
        peg$c163 = /^[A-Za-z\x80-\xD6\xD8-\xF6\xF8-\xFF]/,
        peg$c164 = { type: "class", value: "[A-Za-z\\u0080-\\u00D6\\u00D8-\\u00F6\\u00F8-\\u00FF]", description: "[A-Za-z\\u0080-\\u00D6\\u00D8-\\u00F6\\u00F8-\\u00FF]" },
        peg$c165 = /^[A-Za-z0-9_\-\x80-\xD6\xD8-\xF6\xF8-\xFF]/,
        peg$c166 = { type: "class", value: "[A-Za-z0-9_\\-\\u0080-\\u00D6\\u00D8-\\u00F6\\u00F8-\\u00FF]", description: "[A-Za-z0-9_\\-\\u0080-\\u00D6\\u00D8-\\u00F6\\u00F8-\\u00FF]" },
        peg$c167 = "/",
        peg$c168 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c169 = ":",
        peg$c170 = { type: "literal", value: ":", description: "\":\"" },
        peg$c171 = "_",
        peg$c172 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c173 = "_:",
        peg$c174 = { type: "literal", value: "_:", description: "\"_:\"" },
        peg$c175 = /^[ \t\r\n]/,
        peg$c176 = { type: "class", value: "[ \\t\\r\\n]", description: "[ \\t\\r\\n]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 59 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseWhitespaceStar();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseClassExpression();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEnd();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseEnd() {
      var s0, s1;

      var key    = peg$currPos * 59 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      peg$silentFails++;
      if (input.length > peg$currPos) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      peg$silentFails--;
      if (s1 === peg$FAILED) {
        s0 = void 0;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseClassExpression() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      var key    = peg$currPos * 59 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
